--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ coverage.html
 node_modules
 
 # Example build directory
-example/dist
-module
+# example/dist
+# module
 
 # Editor and other tmp files
 *.swp
